chore: update cross-spawn version to mitigate security vulnerability
Updated the version constraint for `cross-spawn` in the `overrides` section of `package.json` to mitigate the security vulnerability identified as GHSA-3xgq-45jj-v275. This change ensures that only versions of `cross-spawn` that are equal to or greater than 7.0.5 are used, which addresses the identified security issue.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "meow",
         "@typescript-eslint/parser"
       ]
+    },
+    "overrides": {
+      "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5"
     }
   },
   "scripts": {
