--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=22.0.0",
     "pnpm": ">=10.0.0"
   },
-  "packageManager": "pnpm@10.17.1",
+  "packageManager": "pnpm@10.18.1",
   "pnpm": {
     "peerDependencyRules": {
       "allowAny": [
@@ -32,8 +32,8 @@
   },
   "scripts": {
     "dev": "tsx ./packages/scripts/cli.uncli.ts build --watch true",
-    "build": "tsx ./packages/scripts/cli.uncli.ts build --generateIndexes true",
-    "lint": "DEBUG=eslint:eslint eslint --ignore-pattern examples",
+    "build": "NODE_OPTIONS=--max-old-space-size=8192 tsx ./packages/scripts/cli.uncli.ts build --generateIndexes true",
+    "lint": "DEBUG=eslint:eslint eslint --ignore-pattern examples --concurrency auto",
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
     "test": "vitest --watch",
@@ -47,19 +47,19 @@
     "release": "tsx ./packages/scripts/cli.uncli.ts release"
   },
   "devDependencies": {
-    "@commitlint/config-pnpm-scopes": "19.8.1",
-    "@types/node": "24.3.0",
+    "@commitlint/config-pnpm-scopes": "20.1.0",
+    "@types/node": "24.9.1",
     "@unshared/eslint-config": "workspace:*",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "3.2.4",
     "@vitest/utils": "3.2.4",
-    "commitlint": "19.8.1",
-    "eslint": "9.33.0",
-    "happy-dom": "18.0.1",
+    "commitlint": "20.1.0",
+    "eslint": "9.38.0",
+    "happy-dom": "20.0.8",
     "husky": "9.1.7",
-    "memfs": "4.36.3",
-    "tsx": "4.20.4",
-    "typescript": "5.9.2",
+    "memfs": "4.49.0",
+    "tsx": "4.20.6",
+    "typescript": "5.9.3",
     "vitest": "3.2.4"
   }
 }
